<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="jdn">CalTra</string>
    <string name="djn">The Calorie Tracker</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="reg">No account yet? Register here</string>
    <string name="log">Already Registered? Login here.</string>
    <string name="age">Age</string>
    <string name="fullname">Full Name</string>
    <string name="registration">Registration</string>
    <string name="bmicalculator">BMI Calculator</string>

    <string name="txt_height">Your Height</string>
    <string name="txt_weight">Your Weight</string>
    <string name="calc">Calculate</string>
    <string name="urbmi">Your BMI</string>
    <string name="rslt">Result</string>
    <string name="nxt">NEXT</string>
    <string name="what">What\'s your goal?</string>
    <string name="txt_lose">Lose Weight</string>
    <string name="txt_maintain">Maintain Weight</string>
    <string name="txt_gain">Gain Weight</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>

    <string-array name="meal_type_options">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
    </string-array>
    <string name="txt_height_m">Fill in cm</string>
    <string name="txt_height_ft">Fill in ft</string>
    <string name="txt_weight_kg">Fill in kg</string>
    <string name="txt_weight_lb">Fill in lb</string>
    <string name="rDbtn_notActive">Not Active</string>
    <string name="rDbtn_slightlyActive">Slightly Active</string>
    <string name="rDbtn_active">Active</string>
    <string name="text_view_howActive">How Active Are you?</string>
    <string name="txt_name">Name</string>
    <string name="rdbtn_male">Male</string>
    <string name="rdbtn_female">Female</string>
    <string name="rdbtn_other">Other</string>
    <string name="btn_next">Next</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_age">Age</string>
    <string name="txt_info">Basic Info</string>

</resources>
