<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMRActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/bmicalculator"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAskh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_height"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/height"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:inputType="numberDecimal"
        android:hint="@string/txt_height_m"/>

    <TextView
        android:id="@+id/tvAskw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/txt_weight"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:inputType="numberDecimal"
        android:hint="@string/txt_weight_kg"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/calc"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tvR"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/urbmi"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/result"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnN"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:onClick="nextActivity"
        android:background="@color/colorPrimaryDark"
        android:text="@string/nxt"


android:textColor="@color/white"
        />
</LinearLayout>